<resources>
    <string name="app_name">印象·五台山</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">天威哒哒哒~</string>
    <string name="nav_header_subtitle">945151065@qq.com</string>

    <!--zhangwei-->
    <string name="wu_liang_text">
         这座独特的纯白色建筑就是著名的“无量殿”。无量(梁)殿有两层意思，一是说佛法无量;二是说这是一座纯砖结构的建筑，殿内没有一根梁柱，所以也叫“无梁殿”，这就是显通寺“三有三无”之中的“有殿无梁”。
  从建筑上来讲，无量殿的特色体现在它中西结合的独特风格。这种建筑的特点是:建筑结构以文艺复兴式拱券结构为主，而外部尽最大可能保留木结构的形式，是中西文化交流的宝贵见证。
  从文化上来讲，无量殿的价值在于它是一处有着深厚积淀的华严道场。无量殿处处体现着华严宗的特色。首先，大殿通身白色，清静纯洁，犹如-一朵绽放的千叶玉莲，大殿上的朵朵斗拱则好比层层花瓣。这是根据《华严经》中华藏世界的景象塑造的。其次，大殿又名“七处九会”殿，因为释迦牟尼成佛后，先后在七个地方九次开讲《华严经》。无量殿门楣上这七块匾写的就是当年佛祖讲说《华严经》的七个地方。第三，殿中的主像是卢舍那佛，也就是毗卢遮那佛，这也体现了华严家的特色。毗卢遮那佛或卢舍那佛是华严宗所尊奉的主佛，往往和文殊菩萨和普贤菩萨供在一一起， 称为“华严三圣”。无量殿里原来供奉的就是华严三圣。第四，殿中还供奉着唐代华严宗四祖澄观国师的塑像。走进无量殿，正中央这座大佛是明朝方历年间铜铸的卢舍那佛，高4.7米，头戴毗卢冠，手结说法印，可谓宝相庄严。
    </string>
    <string name="da_xiong_text">
        显通寺的主殿大雄宝殿，殿前的广场可以说是五台山的天安门广场，明清时期，全山的大型法事活动基本都在这里举行，直到现在，五台山的祈祷世界和平大法会和“千僧斋”等大型的法会活动也还在这里举行。院中的香炉、须弥座以及计时用的日晷都是为举行法会而设置的。这座大殿给人的感觉首先就是宏大，重檐庑殿项，殿前设置重檐卷棚顶报厦，不仅丰富了大殿的层次，也增加了殿內的空间。它不仅是显通寺的主殿，也是五台山最大的大雄宝殿。
这座大殿的现存建筑是清光绪二十五年才重修的。刚刚一百年出头，其细腻华丽的雕刻装饰反映了清朝晚期的建筑风格。这座大殿还体现了汉传佛教李院最为典型的大雄宝殿布局，正中佛坛上,前面供奉释迦单尼、药师佛、阿弥陀佛，合称“横三世佛”，后面供奉文殊、普贤、观音，合称“三大士”，两侧山墙前的佛坛上是十八罗汉，后侧山墙前另外设置了两个小佛坛，东侧供奉药师佛、日光菩萨、月光菩萨，合称“东方三圣”,西侧供春阿弥陀佛、观音菩萨、大势至普萨，合称“西方三圣”。
    </string>
    <string name="wen_shu_text">
          显通寺的第四怪是“殿殿文殊在”，就是说在显通寺中轴线的七座大殿中曾经都供有文殊答萨的塑像，这在中国寺院中是绝无仅有的，原因就在于，五台山是文殊菩萨的道场，而显通寺又是五台山文殊道场的领袖寺院。在显通寺的七重大殿中，至少供奉着13尊文殊菩萨塑像(原为14尊，无量殿中文殊像70年代被移到扬州大明寺了)，是中国供奉文殊菩萨最多的寺院，而仅这座文殊殿就供奉了7尊，是中国供奉文殊菩萨最多的一座大殿了。大殿两侧供奉的是十二圆觉，是十二位即将觉行圆满的大菩萨，而十二圆觉的头一位就是文殊菩萨。在《圆觉经》中，以文殊菩萨为首的十二位大菩萨-一一向释迦牟尼佛祖提问，佛祖--一作答。《圆觉经》 是华严宗的重要经典，所以华严宗的寺院一般都要供奉十二圆觉。 这7尊文殊菩萨虽然名称不同、神态各异，但每一尊都闪耀着智慧的光芒。
    </string>
    <string name="guan_yin_text">
        观音殿是普陀山观音菩萨的祖籍所在地。在明清时期，它曾经是一座以超度亡灵为已任的水陆殿;它还兼有藏经阁的功能，和其它寺院不一样的是，显通寺有前后两座藏经阁，这也是显通寺四大怪中的“经阁前后盖”。观音殿是“前藏”，供奉着明代正德年间的《大藏经》;而后高殿是“后藏”，专供《大方广佛华严经》。
    </string>

    <string name="da_cang_jing_ge_text">
        阁中保存着汉、满、蒙、藏等各种文字的经书两万多册，是五台山规模最大、保存经书最多的一座臟经阁。 我们看:图上挂着两块御匾，一是上层房檐下那块康熙皇帝题写的“金粟来仪”。阁里是塔院寺五大胜迹之一的“华藏世界转轮藏”，这座转轮藏是明万历九年由明代四大高僧之一的憨山大师亲自设计并筹资建造的，旨在再现《华严经》中记载的华藏世界。在《华严经》中，华藏世界的底层是不停转动的风轮，风轮之上是一望无际的香水海，香水海的中央有一朵千叶莲花，毗卢遮那佛坐在莲花中央讲经说法，每一一片莲花的花瓣上都有一尊佛，共计千佛。我们来看:转轮藏的底部是一个圆盘， 象征风轮，圆盘上:雕刻着汹涌的海浪，象征着浩瀚的香水海，而三十三层经架则好比香水海中层层绽放的千叶莲花，转轮藏的前面供奉着华藏世界的教主一-毗卢遮那佛，毗卢遮那佛的周围围绕着九佛八菩萨，转轮藏楼下的部分又放置了一千尊小佛，他们都在聆听毗卢遮那佛讲经说法，而转轮藏楼上的部分放置着的经书则象征着毗卢遮那佛所讲述的经典。另外告诉大家，这个巨大的转轮藏居然是可以转动的，每当我们推动转轮藏的底层，巨大的转轮藏就会像《华严经》中的千叶莲花一样旋转起来，真实而巧妙地再现了华藏世界的盛景。
    </string>
    <string name="da_bai_ta_text">
        大白塔是整个寺庙最主要的部分，修建于元大德五年也就是1301年，是尼泊尔的建筑师阿尼哥设计修建，距今已有700多年的历史。大白塔也是五台山的标志性建筑，因为它通体洁白，所以称为大白塔，又因为塔下埋葬有佛祖舍利子，所以又称释迦牟尼真身舍利宝塔，佛祖圆寂以后火化成了八万四千颗舍利子，由印度孔雀王朝的阿育王子将八万四千颗舍利子散布于大千世界，并在每颗舍利子上修建了一座5.4米高的小塔。
阿育王是孔雀王朝的第三位君子，也是历史上非常有影响的一位国王，继位后好大喜功，经常发动战争，死伤无数。有一次，他站在刚刚结束的战场上，看到好多人骨肉分离，血流成河，无家可归。他忽然意识到他的胜利是建立在血腥和残忍的代价上的。然后他有了忏悔之意，放下屠刀，一心向佛。在佛的感染下，放弃了战争，放弃了狩猎，开始吃素，建立医院，减轻刑法，修建公路，大兴水利。国家呈现一派繁荣景象。佛教也是在那个时候到达鼎盛。后来，他拜佛祖为师，在佛祖圆寂后，他为了感恩佛祖的教化，在佛祖的舍利子上面修建一座塔，中国一共有19座塔，五台山有幸有这么一座。
    </string>
    <string name="da_ci_bao_dian_text">
        大慈延寿殿是万历皇帝给母亲慈圣皇太后建的，大慈指慈圣皇太后，延寿是希望太后万寿无疆。万历皇帝虽然在四十八年的执政生涯中，三十多年不理朝政，致使明王朝走向了衰落，但从孝敬母亲、扶持佛教这两个方面来说，其功绩是可圈可点的。殿里供奉的是“华严三圣”，正中是释迦牟尼佛，左面是文殊菩萨，右边是普贤菩萨。殿里还悬挂着三位清朝皇帝的御匾:上面是康熙皇帝的“景标清汉”，中间是乾隆皇帝的“揽妙曼云”，下面是嘉庆皇帝的“尊胜法幢”。一个殿内悬挂三位皇帝的御笔，这也反映了塔院寺作为皇家道场的尊崇地位。
    </string>
    <string name="tian_wang_dian_text">
        天王殿正面供奉观音菩萨，背面供奉一通石碑，这通碑是明万历十四年塔院寺住持立的，碑文是万历皇帝的谕旨。内容是说:“佛教的作用是劝恶行善，教化众生，对国家的安定和谐是有很大帮助的。所以，我的母亲慈圣皇太后命人刊印了六百多的新旧佛经颁发给塔院寺。你们一定要体谅她老人家的苦心，好好珍藏，认真诵读，不要让它们有所损坏，让它们永远护持五台佛境，护持佛祖宝塔，钦此!”慈圣皇太后笃信佛教，万历皇帝对母亲慈圣皇太后有着非常深厚的感情，在全国各地大兴佛寺，使得全国佛教界都对慈圣皇太后感恩戴德，认为她是护持佛法的活菩萨，后来干脆直接称之为“九莲菩萨”。塔院寺就是在这种情况下，由万历皇帝下旨从显通寺独立出来的，由于目的是为了给母亲积功德，所以，寺院从建立伊始就深深地盖上了慈圣皇太后的烙印。天王殿中这尊观音菩萨其实就是慈圣皇太后的化身，而这通碑则是要告诉僧人和信徒不要忘记皇太后的恩德。
    </string>
    <string name="roam_wutai_title1">
        菩萨顶游记
    </string>
    <string name="roam_wutai_text1">
        五台山中，一般寺院均是青砖灰瓦，唯独菩萨顶金瓦覆顶，宛若一座至高无上的金色佛国伫立于台怀镇最高处。因此，菩萨顶也被誉为“五台山金顶”。
    </string>
    <string name="roam_wutai_title2">
        踏上解脱之梯
    </string>
    <string name="roam_wutai_text2_1">
        朝拜菩萨顶，最先映入眼帘的是一条长长宽宽的石砌台阶，共有108级。从下往上望去，宛若一座解脱之梯，据说“108”寓意着众生的六根接触六尘所产生的“百八烦恼”。
    </string>
    <string name="roam_wutai_text2_2">
        每当踏上一级台阶，我们便发愿清净众生的一切烦恼。当我们踏完这108级台阶登上金顶时，愿所有的有情都能脱离烦恼，获得安乐。
    </string>
    <string name="roam_wutai_title3">
        皇家特色木牌楼
    </string>
    <string name="roam_wutai_text3">
        在牌楼的建造规格中最高的是五柱、四门、九楼顶，象征着九五至尊，而菩萨顶的木牌楼地位仅次于它。牌楼上刻有康熙皇帝亲笔所书的“灵峰圣境”四个大字。
    </string>
    <string name="roam_wutai_title4">
        七塑七列见真容
    </string>
    <string name="roam_wutai_text4">
        在莲师殿内顶礼朝拜后，便来到菩萨顶的最后一重大殿——大文殊殿。据说殿内供奉的文殊像为当年匠人塑像时，七塑七裂，后文殊菩萨显现真容，匠人依此而造。故菩萨顶的文殊殿又被称为真容文殊殿，亲见殿中文殊像犹如亲见文殊菩萨真容，倍感加持，十分灵瑞。
    </string>
    <string name="dummy_button">Dummy Button</string>

    <string name="title_activity_setting">Settings</string>

    <!-- Strings related to Settings -->


    <!-- Example General settings -->


    <string name="pref_header_general">常规</string>

    <string name="pref_title_social_recommendations">允许推荐</string>

    <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message history </string>

    <string name="pref_title_display_name">显示名字</string>

    <string name="pref_default_display_name">约翰·史密斯</string>

    <string name="pref_title_add_friends_to_messages">添加朋友</string>


    -
    <string-array name="pref_example_list_titles">

        <item>总是</item>

        <item>当需要时</item>

        <item>从不</item>

    </string-array>


    -
    <string-array name="pref_example_list_values">

        <item>1</item>

        <item>0</item>

        <item>-1</item>

    </string-array>

    <!-- Example settings for Data & Sync -->


    <string name="pref_header_data_sync">数据同步</string>

    <string name="pref_title_sync_frequency">同步频率</string>


    -
    <string-array name="pref_sync_frequency_titles">

        <item>15 分钟</item>

        <item>30 分钟</item>

        <item>1 小时</item>

        <item>3 小时</item>

        <item>6 小时</item>

        <item>从不</item>

    </string-array>


    -
    <string-array name="pref_sync_frequency_values">

        <item>15</item>

        <item>30</item>

        <item>60</item>

        <item>180</item>

        <item>360</item>

        <item>-1</item>

    </string-array>


    -
    <string-array name="list_preference_entries">

        <item>Entry 1</item>

        <item>Entry 2</item>

        <item>Entry 3</item>

    </string-array>


    -
    <string-array name="list_preference_entry_values">

        <item>1</item>

        <item>2</item>

        <item>3</item>

    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">系统同步设置</string>

    <!-- Example settings for Notifications -->


    <string name="pref_header_notifications">通知</string>

    <string name="pref_title_new_message_notifications">新消息通知</string>

    <string name="pref_title_ringtone">铃声</string>

    <string name="pref_ringtone_silent">静音</string>

    <string name="pref_title_vibrate">震动</string>

    <string name="title_activity_login">登录</string>

    <!-- Strings related to login -->


    <string name="action_sign_in_short">登录</string>

    <string name="error_invalid_email">手机号格式错误</string>

    <string name="error_invalid_password">密码长短小于6</string>

    <string name="error_incorrect_password">密码错误</string>

    <string name="error_field_required">手机号为必填项</string>

    <string name="permission_rationale">本程序需要联系人权限 </string>
</resources>
